[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanobot-kimi-channel"
version = "0.1.0"
description = "Kimi (Moonshot) channel plugin for nanobot – connects via agent-ws WebSocket + IM RPC"
requires-python = ">=3.10"
dependencies = [
    "nanobot-ai>=0.2.0",
    "websockets>=14.0",
    "httpx>=0.27",
]

[project.entry-points."nanobot.channels"]
kimi = "nanobot_kimi_channel:KimiChannel"

[tool.setuptools.packages.find]
where = ["src"]
